--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_FW/FC_FW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_FW/FC_FW.cshtml
@@ -80,7 +80,7 @@
                 </tr>
             </table>
         </div>
-        <div id="myTabContent" style="margin-left: 15%; padding-bottom: 150px;">
+        <div id="myTabContent"  class="div_content">
             <div id="divJBXX" class="divSplit" style="display: block; text-align: left">
                 <span class="spanSplit">基本信息</span>
                 <em class="emSplit"></em>
