--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-        <div id="divLBHead" style="margin-left: 15%; margin-top: 20px;z-index: 1001;position:relative;">
+        <div id="divLBHead" class="div_head">
             <table class="table" style="width: 100%; text-align: center;">
                 <tr>
                     <td class="headtd">
@@ -77,7 +77,7 @@
                 </tr>
             </table>
         </div>
-        <div id="myTabContent" style="margin-left: 15%; padding-bottom: 150px;">
+        <div id="myTabContent" class="div_content">
             <div id="divFL" class="divSplit" style="display: block; text-align: left">
                 <span class="spanSplit">分类与供求</span>
                 <em class="emSplit"></em>
