--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </div>
-        <div id="divLBHead" style="margin-left: 15%;">
+        <div id="divLBHead" class="div_head">
             <table class="table" style="width: 100%; text-align: center;">
                 <tr>
                     <td class="headtd">
@@ -72,7 +72,7 @@
                 </tr>
             </table>
         </div>
-        <div id="myTabContent" style="margin-left: 15%;">
+        <div id="myTabContent" class="div_content">
             <div id="divDL" class="divLB" style="display: block; ">
                 <div id="divDLText" class="DLText">1.选择大类</div>
                 <img style="width: 20px; height: 28px; float: left;" src="@Url.Content("~/Areas/Business/Css/images/righttip.png")" />
