--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/_Layout.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     $(this).attr("onKeyPress", "if (event.keyCode!=46 && event.keyCode!=45 && (event.keyCode<48 || event.keyCode>57)) event.returnValue=false");
                 }
             });
+            //$("body").css("height", document.documentElement.clientHeight);
         });
     </script>
      @RenderSection("Section_Head", false)
