--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
@@ -168,7 +168,7 @@
                     <span id="spanDD" class="spanFWLX SRK" style="display: inline-block;width: 322px;">
                         <input id="DD" maxlength="9" column="DD" class="inputLCFB spanFontColor" type="text" style="width:320px;text-align:left;padding-left:12px;" />
                     </span>
-                    <div id="divDDip" class="Warn" style="z-index: 996; position: relative;"></div>
+                    <div id="divDDTip" class="Warn" style="z-index: 996; position: relative;"></div>
                 </div>
             </div>
             <div id="divZJ" class="divFWCZ" style="z-index: 995;">
@@ -202,15 +202,16 @@
                         <span class="spanFontColor">㎡</span>
                     </span>
                 </div>
+                <div id="divMJTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divXXXX" class="divSplit" style="display: block; text-align: left;">
                 <span class="spanSplit">详细信息</span>
                 <em class="emSplit"></em>
             </div>
             <div id="divFYBT" class="divFWCZ" style="margin-top: 22px;">
-                <div class="divLeft">
+                <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
-                    <span id="spanFYBT">房源标题</span>
+                    <span id="spanFYBT">标题</span>
                 </div>
                 <div class="divRight">
                     <input id="BT" maxlength="50" column="BT" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
@@ -220,22 +221,12 @@
             <div id="divFYMS" class="divFWCZ" style="height: 253px;">
                 <div class="divLeft" style="height: 170px; vertical-align: top;">
                     <span class="required" style="vertical-align: top">*</span>
-                    <span id="spanFYMS" style="vertical-align: top">房源描述</span>
+                    <span id="spanFYMS" style="vertical-align: top">补充描述</span>
                 </div>
                 <div class="divRight">
-                    @*<textarea id="FYMS" class="spanFWLX SRK" style="width: 594px; height: 170px; padding: 6px 12px; color: #999999"></textarea>*@
                     <script id="FYMS" type="text/plain" style="width:594px;height:200px;display:inline-block;">
                     </script>
                     <div id="divFYMSTip" class="Warn"></div>
-                </div>
-            </div>
-            <div id="divJYGZ" class="divFWCZ" style="height: 200px;">
-                <div class="divLeft" style="height: 170px; vertical-align: top;">
-                    <span class="required" style="vertical-align: top">*</span>
-                    <span id="spanJYGZ" style="vertical-align: top">交易规则</span>
-                </div>
-                <div class="divRight">
-                    <textarea id="JYGZ" class="spanFWLX SRK" style="width: 594px; height: 170px; padding: 6px 12px; color: #999999"></textarea>
                 </div>
             </div>
             <div id="divFWZP" class="divFWCZ">
