--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
@@ -191,7 +191,20 @@
                     <div id="divZJTip" class="Warn" style="z-index: 996; position: relative;"></div>
                 </div>
             </div>
-            <div id="divMJ" class="divFWCZ" style="z-index: 994;">
+            <div id="divSJ" class="divFWCZ" style="z-index: 994; display: none;">
+                <div class="divLeft" style="margin-left: 128px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">售价</span>
+                </div>
+                <div class="divRight">
+                    <span id="spanSJ" class="spanFWLX SRK" style="display: inline-block;">
+                        <input class="inputLCFB spanFontColor" id="SJ" maxlength="9" column="SJ" type="text" style="width: 80px" />
+                        <span class="spanFontColor">万元</span>
+                    </span>
+                </div>
+                <div id="divSJTip" class="Warn" style="z-index: 996; position: relative;"></div>
+            </div>
+            <div id="divMJ" class="divFWCZ" style="z-index: 993;">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">面积</span>
@@ -202,7 +215,7 @@
                         <span class="spanFontColor">㎡</span>
                     </span>
                 </div>
-                <div id="divMJTip" class="Warn" style="z-index: 996; position: relative;"></div>
+                <div id="divMJTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
             <div id="divXXXX" class="divSplit" style="display: block; text-align: left;">
                 <span class="spanSplit">详细信息</span>
