--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
@@ -166,7 +166,7 @@
                 </div>
                 <div class="divRight">
                     <span id="spanDD" class="spanFWLX SRK" style="display: inline-block;width: 322px;">
-                        <input id="DD" maxlength="9" column="DD" class="inputLCFB spanFontColor" type="text" style="width:320px;text-align:left;padding-left:12px;" />
+                        <input id="DD" column="DD" class="inputLCFB spanFontColor" type="text" style="width:320px;text-align:left;padding-left:12px;" />
                     </span>
                     <div id="divDDTip" class="Warn" style="z-index: 996; position: relative;"></div>
                 </div>
