--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_XZL/FC_XZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_XZL/FC_XZL.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "FC_SP";
+    ViewBag.Title = "FC_XZL";
     Layout = "~/Areas/Business/Views/Shared/_ListLayout.cshtml";
 }
 
@@ -9,13 +9,13 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title></title>
-    <link href="@Url.Content("~/Areas/Business/Css/FC/FC_SP.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Areas/Business/Css/FC/FC_XZL.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/Top.css" )" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/XZQ.css" )" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_SP.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_SPYZ.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_SPZP.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_XZL.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_XZLYZ.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_XZLZP.js")"></script>
 </head>
 <body>
     <div>
@@ -79,18 +79,8 @@
         </div>
         <div id="myTabContent" class="div_content">
             <div id="divFL" class="divSplit" style="display: block; text-align: left">
-                <span class="spanSplit">分类与供求</span>
+                <span class="spanSplit">供求与类型</span>
                 <em class="emSplit"></em>
-            </div>
-            <div id="divFL" class="divFWCZ">
-                <div class="divLeft" style="margin-left: 128px;">
-                    <span class="required">*</span>
-                    <span class="spanFWCZ">分类</span>
-                </div>
-                <div class="divRight">
-                    <img class="iFWCZ" id="imgSPZS" /><label class="labelFWCZ">&nbsp;&nbsp;商铺租售&nbsp;&nbsp;</label>
-                    <img class="iFWCZ" id="imgSYZR" /><label class="labelFWCZ">&nbsp;&nbsp;生意转让</label>
-                </div>
             </div>
             <div id="divGQ" class="divFWCZ">
                 <div class="divLeft" style="margin-left: 128px;">
@@ -101,10 +91,6 @@
                     <img class="iFWCZ" id="imgCZ" /><label class="labelFWCZ">&nbsp;&nbsp;出租&nbsp;&nbsp;</label>
                     <img class="iFWCZ" id="imgCS" /><label class="labelFWCZ">&nbsp;&nbsp;出售</label>
                 </div>
-            </div>
-            <div id="divJBXX" class="divSplit" style="display: block; text-align: left">
-                <span class="spanSplit">基本信息</span>
-                <em class="emSplit"></em>
             </div>
             <div id="divLX" class="divFWCZ" style="z-index: 999">
                 <div class="divLeft" style="margin-left: 128px;">
@@ -117,21 +103,41 @@
                             <span id="spanSPLX" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类型</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divSPLX" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divXZLLX" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="divLSJY" class="divFWCZ" style="z-index: 998;">
-                <div class="divLeft" style="margin-left: 102px;">
+            <div id="divZCGS" class="divFWCZ" style="z-index: 999">
+                <div class="divLeft" style="margin-left: 86px;">
                     <span class="required">*</span>
-                    <span class="spanFWCZ">历史经营</span>
+                    <span class="spanFWCZ">可注册公司</span>
                 </div>
                 <div class="divRight">
-                    <span id="spanLSJY" class="spanFWLX SRK" style="display: inline-block;width: 322px;">
-                        <input id="LSJY" maxlength="9" column="LSJY" class="inputLCFB spanFontColor" type="text" style="width:320px;text-align:left;padding-left:12px;" />
+                    <div id="divKZCGSText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanKZCGS" class="spanFWQK spanFontColor" style="margin-top: 0">否</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divKZCGS" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divJBXX" class="divSplit" style="display: block; text-align: left">
+                <span class="spanSplit">基本信息</span>
+                <em class="emSplit"></em>
+            </div>
+            <div id="divLPMC" class="divFWCZ" style="z-index: 998;">
+                <div class="divLeft" style="margin-left: 102px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">楼盘名称</span>
+                </div>
+                <div class="divRight">
+                    <span id="spanLPMC" class="spanFWLX SRK" style="display: inline-block;width: 322px;">
+                        <input id="LPMC" maxlength="9" column="LPMC" class="inputLCFB spanFontColor" type="text" style="width:320px;text-align:left;padding-left:12px;" />
                     </span>
-                    <div id="divLSJYTip" class="Warn" style="z-index: 996; position: relative;"></div>
+                    <div id="divLPMCTip" class="Warn" style="z-index: 996; position: relative;"></div>
                 </div>
             </div>
             <div id="divSZQY" class="divFWCZ" style="z-index: 997;">
