--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_XZL/FC_XZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_XZL/FC_XZL.cshtml
@@ -98,17 +98,17 @@
                     <span class="spanFWCZ">类型</span>
                 </div>
                 <div class="divRight">
-                    <div id="divSPLXText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divXZLLXText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanSPLX" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类型</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divXZLLX" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divXZLLX" class="divdropdown" style="margin-top: -7px; margin-left: -1px; height: 69px">
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="divZCGS" class="divFWCZ" style="z-index: 999">
+            <div id="divZCGS" class="divFWCZ" style="z-index: 998">
                 <div class="divLeft" style="margin-left: 86px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">可注册公司</span>
