--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_XZL/FC_XZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_XZL/FC_XZL.cshtml
@@ -100,7 +100,7 @@
                 <div class="divRight">
                     <div id="divXZLLXText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanSPLX" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类型</span>
+                            <span id="spanXZLLX" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类型</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divXZLLX" class="divdropdown" style="margin-top: -7px; margin-left: -1px; height: 69px">
