--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/WDFB.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/WDFB.css
@@ -224,3 +224,48 @@
     display: inline-block;
     color: #5bc0de;
 }
+
+.div_main_info_bottom {
+    background-color: #fff;
+    height: 38px;
+    color: #333;
+    font-size: 14px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    padding-left: 10px;
+    padding-top: 8px;
+}
+
+.span_main_info_bottom {
+    font-size: 12px;
+    margin-left: 8px;
+    margin-top: 2px;
+    float: left;
+}
+
+.div_main_info_bottom_fy {
+    float: right;
+}
+
+.a_main_info_bottom_fy {
+    line-height: 18px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 12px;
+    background-color: #ffffff;
+    border: 1px solid #dee3e7;
+    padding: 2px 6px;
+    display: inline-block;
+    margin: 0 6px;
+    color: #333;
+}
+
+.a_main_info_bottom_fy_current {
+    background-color: #5bc0de;
+    color: #ffffff;
+}
+
+.a_main_info_bottom_fy:hover {
+    background-color: #5bc0de;
+    text-decoration: none;
+    color: #ffffff;
+}
