--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_BJBDN/ES_SJSM_BJBDN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_BJBDN/ES_SJSM_BJBDN.cshtml
@@ -114,9 +114,9 @@
                         <div id="divBJBPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divBJBXHText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanBJBXH" class="spanFWQK spanFontColor" style="margin-top: 0">请选择型号</span>
+                    <div id="divBJBXHText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative; width: 200px;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px; width: 200px;">
+                            <span id="spanBJBXH" class="spanFWQK spanFontColor" style="margin-top: 0; width: 175px;">请选择型号</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divBJBXH" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
