--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_BJBDN/ES_SJSM_BJBDN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_BJBDN/ES_SJSM_BJBDN.cshtml
@@ -98,7 +98,7 @@
                     <span class="spanFWCZ">类别</span>
                 </div>
                 <div class="divRight">
-                    <div id="divLBText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divLBText" class="spanFWLXOut SRK" style="position: relative;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanLB" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类别</span>
                             <div class="divFWQKArrow"></div>
@@ -106,7 +106,7 @@
                         <div id="divLB" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divBJBPPText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divBJBPPText" class="spanFWLXOut SRK" style="position: relative;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanBJBPP" class="spanFWQK spanFontColor" style="margin-top: 0">请选择品牌</span>
                             <div class="divFWQKArrow"></div>
@@ -114,7 +114,7 @@
                         <div id="divBJBPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divBJBXHText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative; width: 200px;">
+                    <div id="divBJBXHText" class="spanFWLXOut SRK" style="width: 200px;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px; width: 200px;">
                             <span id="spanBJBXH" class="spanFWQK spanFontColor" style="margin-top: 0; width: 175px;">请选择型号</span>
                             <div class="divFWQKArrow"></div>
@@ -122,9 +122,81 @@
                         <div id="divBJBXH" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
+                    <div id="divXLText" class="spanFWLXOut SRK" style="display: none;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanXL" class="spanFWQK spanFontColor" style="margin-top: 0px;">请选择小类</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divXL" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div id="divXJCD" class="divFWCZ" style="z-index: 998">
+            <div id="divBJBXXCS" class="divFWCZ" style="z-index: 998">
+                <div class="divLeft" style="margin-left: 100px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ">详细参数</span>
+                </div>
+                <div class="divRight">
+                    <div id="divCPUPPText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanCPUPP" class="spanFWQK spanFontColor" style="margin-top: 0">请选择CPU品牌</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divCPUPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divCPUHSText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanCPUHS" class="spanFWQK spanFontColor" style="margin-top: 0">请选择CPU核数</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divCPUHS" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divNCText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanNC" class="spanFWQK spanFontColor" style="margin-top: 0">请选择内存</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divNC" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divBJBXXCS_2" class="divFWCZ" style="z-index: 997">
+                <div class="divLeft" style="margin-left: 160px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ"></span>
+                </div>
+                <div class="divRight">
+                    <div id="divYPText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanYP" class="spanFWQK spanFontColor" style="margin-top: 0">请选择硬盘</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divYP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divPMCCText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanPMCC" class="spanFWQK spanFontColor" style="margin-top: 0">请选择屏幕尺寸</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divPMCC" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divXKText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanXK" class="spanFWQK spanFontColor" style="margin-top: 0">请选择显卡</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divXK" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divXJCD" class="divFWCZ" style="z-index: 996">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">新旧</span>
@@ -140,7 +212,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divJG" class="divFWCZ" style="z-index: 997;">
+            <div id="divJG" class="divFWCZ" style="z-index: 995">
                 <div class="divLeft" style="margin-left: 102px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">转让价格</span>
@@ -151,9 +223,9 @@
                         <span class="spanFontColor">元</span>
                     </span>
                 </div>
-                <div id="divJGTip" class="Warn" style="z-index: 996; position: relative;"></div>
+                <div id="divJGTip" class="Warn" style="z-index: 995; position: relative;"></div>
             </div>
-            <div id="divJYDD" class="divFWCZ" style="z-index: 996;">
+            <div id="divJYDD" class="divFWCZ" style="z-index: 994;">
                 <div class="divLeft" style="margin-left: 102px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">交易地点</span>
