--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/ES/ES_SJSM_BJBDN.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/ES/ES_SJSM_BJBDN.css
@@ -85,6 +85,10 @@
     display: inline-block;
     width: 128px;
     height: 34px;
+    border: 1px solid #cccccc; 
+    border-radius: 4px; 
+    z-index: 997; 
+    position: relative;
 }
 
 .spanFWLXIn {
