--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_SMCP/ES_SJSM_SMCP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_SMCP/ES_SJSM_SMCP.cshtml
@@ -106,23 +106,7 @@
                         <div id="divLB" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divPBPPText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanPBPP" class="spanFWQK spanFontColor" style="margin-top: 0">请选择品牌</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divPBPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                    <div id="divPBXHText" class="spanFWLXOut SRK" style="width: 200px;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px; width: 200px;">
-                            <span id="spanPBXH" class="spanFWQK spanFontColor" style="margin-top: 0; width: 175px;">请选择型号</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divPBXH" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                    <div id="divXLText" class="spanFWLXOut SRK" style="display: none;">
+                    <div id="divXLText" class="spanFWLXOut SRK">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanXL" class="spanFWQK spanFontColor" style="margin-top: 0px;">请选择小类</span>
                             <div class="divFWQKArrow"></div>
